chore: user guide for valid movements

--- a/src/components/chessboard/chessboard.module.css
+++ b/src/components/chessboard/chessboard.module.css
@@ -56,6 +56,13 @@
     border-bottom-right-radius: 16px;
 }
 
+.possibleMove {
+    width: 30%;
+    height: 30%;
+    background-color: #FF5C00;
+    border-radius: 50%;
+}
+
 
 @media (max-width: 600px) {
     .board {
