--- a/src/components/chessboard/chessboard.module.css
+++ b/src/components/chessboard/chessboard.module.css
@@ -8,6 +8,7 @@
 }
 
 .board {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(8, 3fr);
     grid-template-rows: repeat(8, 3fr);
@@ -61,6 +62,67 @@
     height: 30%;
     background-color: #FF5C00;
     border-radius: 50%;
+}
+
+.shake {
+    animation: shakeAni 0.5s;
+}
+
+.errorBox {
+    border-radius: 16px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    background-color: rgba(255, 0, 0, 0.301);
+}
+
+@keyframes shakeAni {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
 
 
