--- a/src/components/chessboard/chessboard.module.css
+++ b/src/components/chessboard/chessboard.module.css
@@ -1,8 +1,9 @@
 .boardContainer {
+    position: relative;
     border: 1px solid #414141;
     border-radius: 24px;
     padding: 10px;
-    margin: 20px;
+    margin: 20px 0;
     height: 70vh;
     width: 70vh
 }
