--- a/src/components/chessboard/chessboard.module.css
+++ b/src/components/chessboard/chessboard.module.css
@@ -21,6 +21,7 @@
 }
 
 .square {
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -62,6 +63,14 @@
     width: 30%;
     height: 30%;
     background-color: #FF5C00;
+    border-radius: 50%;
+}
+
+.possibleMoveCanCut {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #ff00008f;
     border-radius: 50%;
 }
 
